# autogenGitHubCodeQL

./: .gitignore  CMakeLists.txt  LICENSE  README.md  results_t21.sarif
.github/workflows/: ci.yml  codeql.yml
C++/: README.md
codeql-custom-queries/cpp/: C8-use-class-insteadof-struct.ql  T21-require-complete-set-of-operations-for-concept.ql  long-function.ql  qlpack.yml
include/: greeter.h
src/: greeter.cpp  main.cpp
tests/: test_C8-use-class-insteadof-struct.cpp  test_T21-require-complete-set-of-operations-for-concept.cpp  test_greeter.cpp  test_long-function.cpp
